--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,8 +10,12 @@
   --btn-hover: #0B5ED7;
 }
 
-h1, h2, h3, p {
+h1, h2, h3 {
     color: var(--text-main);
+}
+
+p, h4 {
+    color: var(--text-secondary);
 }
 
 h1 {
@@ -37,7 +41,6 @@ p {
 h4 {
     font-size: 12px;
     font-weight: 400;
-    color: var(--text-secondary);
 }
 
 * {
