--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -59,6 +59,7 @@ h4 {
     width: 360px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 
                 0 1px 2px rgba(0, 0, 0, 0.06);
+    pointer-events: auto;
 }
 
 .container.hidden {
